<resources>
    <string name="app_name">HonorAdapter</string>
    <string name="next_">Next</string>
    <string name="finish">Begin</string>
    <string name="no_sim_card_title">No SIM card detected</string>
    <string name="no_sim_card_boot">Power off</string>
    <string name="no_sim_card_gone">Continue</string>
    <string name="privaty_title">Terms and Conditions</string>
    <string name="sucess">Configuration successful</string>
    <string name="choose_language">Select language</string>
    <string name="wifi_server">Wi-Fi+ service</string>
    <string name="wlan_server">WLAN+ service</string>
    <string name="wifi_server_title_new">Enhanced Internet experience</string>
    <string name="wifi_server_content_internal_new_wifi">The Wi-Fi+ service helps you intelligently choose between Wi-Fi and mobile data. This service will obtain your location using nearby base stations and access points, and then automatically turn Wi-Fi on or off. Wi-Fi+ also evaluates available Wi-Fi hotspots and makes intelligent recommendations. For certain free Wi-Fi hotspots, Wi-Fi+ will automatically obtain the verification code from incoming SMS messages and log in to the network via your browser (only supported in China). Enable this service?</string>
    <string name="wifi_server_content_internal_new_wlan">The WLAN+ service helps you intelligently choose between WLAN and mobile data. This service will obtain your location using nearby base stations and access points, and then automatically turn WLAN on or off. WLAN+ also evaluates available WLAN hotspots and makes intelligent recommendations. For certain free WLAN hotspots, WLAN+ will automatically obtain the verification code from incoming SMS messages and log in to the network via your browser (only supported in China). Enable this service?</string>
    <string name="wifi_server_content_global_new_wifi">The Wi-Fi+ service helps you intelligently choose between Wi-Fi and mobile data. This service will obtain your location using nearby base stations and access points, and then automatically turn Wi-Fi on or off. Wi-Fi+ also evaluates available Wi-Fi hotspots and makes intelligent recommendations. Enable this service?</string>
    <string name="wifi_server_content_global_new_wlan">The WLAN+ service helps you intelligently choose between WLAN and mobile data. This service will obtain your location using nearby base stations and access points, and then automatically turn WLAN on or off. WLAN+ also evaluates available WLAN hotspots and makes intelligent recommendations. Enable this service?</string>
    <string name="emergency_call">Emergency call</string>
    <string name="fans_statement">Huawei Club is the only official communication platform of Huawei. You can find information about the latest Huawei products and services, ROM resources, games, etc., and participate in a number of online and offline interactive activities. Huawei Club is Huawei\'s window to you.</string>
    <string name="unusual_shutdown_title">Power off</string>
    <string name="lock_screen_title">Protect your phone</string>
    <string name="lock_screen_main_info">Prevent others from using this phone without your permission by activating device protection features.</string>
    <string name="lock_screen_learn_more">Learn more</string>
    <string name="lock_screen_learn_more_info">Device protection is automatically activated when you add a Google Account and set a screen lock style. Together with Android Device Manager, you can locate and erase your phone, and protect it from reuse if it\'s lost or stolen.\n\nEven if your phone gets wiped, your Google Account password will be required before anyone can use this phone.</string>
    <string name="lock_screen_set_lock">Set screen lock style</string>
    <string name="lock_screen_success">Your screen lock style has been set up successfully.</string>
    <string name="lock_screen_skip_warning">Device protection features will not be activated. You won\'t be able to prevent others from using this phone if it\'s lost, stolen or wiped.</string>
    <string name="lock_screen_skip_cancel">Don\'t skip</string>
    <string name="lock_screen_skip_anyway">Skip anyway</string>
    <string name="lock_screen_skip_note">Note</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_info">You are now a normal user of this phone.</string>
    <string name="import_content_new">1. Please only share your phone with people you trust.\n2. The owner can uninstall your apps and delete your data.\n3. Other users can update your apps.\n4. Some features will not be available to you and will be grayed out on the interface.</string>
    <string name="import_title">Important:</string>
    <string name="user_new_user_name">New user</string>
    <string name="back_to_wifi_dialog_title">Note</string>
    <string name="back_to_wifi_dialog_message">The beta version you\'re using requires Internet access to continue. Thank you for your cooperation.</string>
    <string name="back_to_wifi_dialog_confirm">OK</string>
    <string name="please_connect_internet_first">Please connect to the Internet first.</string>
    <string name="back_to_hw_account_dialog_message">The beta version you\'re using requires that you log in or register a Huawei ID to continue. Thank you for your cooperation.</string>
    <string name="back_to_google_account_dialog_message">The beta version you\'re using requires that you log in or register a Google account to continue. Thank you for your cooperation.</string>
    <string name="back_to_lockscreen_dialog_message">The beta version you\'re using requires that you set a screen lock method to continue. Thank you for your cooperation.</string>
    <string name="device_permitted_agreement">End User License Agreement</string>
    <string name="view_more">view it</string>
    <string name="device_agreement_info">Please read the following content carefully before using your Huawei device. Using any Huawei device indicates your acknowledgement and agreement to Huawei\'s Terms &amp; Conditions. If you recently purchased a Huawei product and do not agree to Huawei\'s Terms &amp; Conditions, you may return your Huawei device to an official Huawei retailer or authorized reseller for a refund, provided that you abide by the terms of Huawei\'s returns policy. Touch here to view the End User License Agreement and Huawei\'s returns policy.</string>
    <string name="device_manager_info">To provide a better user experience, the harassment filter and do not disturb features will access your contacts, messages, and call log. The collection, use, and storage of this data is governed by the provisions in the End User License Agreement.</string>
    <string name="device_manager_title">Phone Manager</string>
    <string name="user_feedback_title">Participate in user experience improvement plan</string>
    <string name="cancel_and_remove_new_user">CANCEL AND REMOVE NEW USER</string>
    <string name="emergency_call_format">EMERGENCY CALL</string>
    <string name="vision_settings_format">VISION SETTINGS</string>
    <string name="insert_sim_card">Insert SIM card</string>
    <string name="no_sim_card">No SIM card</string>
    <string name="oobe_finish_tip">Your phone is ready</string>
    <string name="get_started_format">GET STARTED</string>
    <string name="next_format">NEXT</string>
    <string name="skip_format">SKIP</string>
    <string name="back_format">BACK</string>
    <string name="agree_format">AGREE</string>
    <string name="disagree_format">DISAGREE</string>
    <string name="device_agreement_tip_new">I agree to the %s.</string>
    <string name="vision_setting_title">Vision settings</string>
    <string name="vision_setting_sub_title">You can customize this device to your needs. These accessibility features can be changed later from Settings.</string>
    <string name="accessibility_screen_magnification_title">Magnification gestures</string>
    <string name="title_font_size">Font size</string>
    <string name="screen_zoom_title">Display mode</string>
    <string name="hiboard_and_smartcare">HiBoard and Smartcare</string>
    <string name="hiboard_info">HiBoard is located on the left side of your home screen. It aggregates the search and Smartcare features and shows you content that may interest you, including news, lifestyle services, music, and videos. HiBoard needs to connect to the Internet, and access to your Huawei ID, IMEI, and location.</string>
    <string name="weather_service_title">Weather service</string>
    <string name="weather_service_message">Weather needs to use the Location and Phone permissions (find nearby base stations for assisted positioning) to obtain your current location, and provide weather forecast information.</string>
    <string name="app_permissions_title">About app permissions</string>
    <string name="app_permissions_content_internal">For third-party apps you have installed, EMUI will intelligently configure permissions, including Storage, Location, Phone, Camera, SMS, Contacts, and Microphone.</string>
    <string name="app_permissions_content_internals">You can also go to Settings &gt; Apps to configure individual app permissions, or manually configure permissions from Phone Manager &gt; Permission manager.</string>
    <string name="term_content_1">Smartcare provides travel management, work reminders, contact birthday reminders, traffic information, and other services. It needs to access the Internet, and the following information will also be collected and processed:</string>
    <string name="term_collect_device_info">Device information, including IMEI, IMSI, and MEID.</string>
    <string name="term_collect_personal_info">Personal information, including your location, contacts, messages, calendar, fitness records, sleep records, and usage behaviors.</string>
    <string name="term_info_helper">You can exit Smartcare to terminate the information collection and upload activities described above.</string>
    <string name="yun_service_tips">Cloud management of your photos, contacts and other data, the ultimate safe storage; \n One-key machine backup, easy replacement; \n Position the device at any time, remotely search.</string>
    <string name="begin_start_yun_service">Turn on cloud services</string>
    <string name="not_begin_start_yun_service">Not open</string>
    <string name="yun_service">Cloud service</string>
    <string name="term_content_2">This software needs to send some of the above information to a third-party service provider, and the third party provides you with the appropriate services.</string>
    <string name="disagree_cancle">Cancel</string>
    <string name="fingerprint_title"> Fingerprint Touch </string>
    <string name="fingerprint_desc"> touch fingerprint sensor replaces the corresponding function of the screen (no need to enter the fingerprint)</string>
    <string name="fingerprint_line1_title"> call answer </string>
    <string name="fingerprint_line1_desc"> caller interface long press fingerprint sensor to answer the phone </string>
    <string name="fingerprint_line2_title">Shot </string>
    <string name="fingerprint_line2_desc"> long press the fingerprint sensor in the camera viewfinder to shoot </string>
    <string name="fingerprint_line3_title">Stop alarm </string>
    <string name="fingerprint_line3_desc"> alarm bell interface long press the fingerprint sensor to stop the alarm </string>
    <string name="fingerprint_line4_title">Show Notification Panel</string>
    <string name="fingerprint_line4_desc"> On the fingerprint sensor, the finger slides down to display the system notification panel, double-click on the empty notification, and slide it up. </string>
    <string name="fingerprint_line5_title">View picture </string>
    <string name="fingerprint_line5_desc"> When viewing the picture in full screen, swipe left and right on the fingerprint sensor to switch the image </string>
</resources>