<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/smartcare_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_8"
        android:layout_marginTop="@dimen/layout_margin_4"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:text="@string/hiboard_and_smartcare"
        android:textColor="@color/black_100"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/hiboard_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/smartcare_title"
        android:layout_marginBottom="@dimen/layout_margin_8"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/hiboard_info"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/term_content_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hiboard_info"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/term_content_1"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/circle_dot_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_content_1"
        android:layout_centerVertical="true"
        android:drawablePadding="@dimen/layout_padding_4"
        android:drawableStart="@drawable/circle_dot"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/term_collect_device_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/term_content_1"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/term_collect_device_info"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/circle_dot_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_collect_device_info"
        android:drawablePadding="@dimen/layout_padding_4"
        android:drawableStart="@drawable/circle_dot"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/term_collect_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/term_collect_device_info"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/term_collect_personal_info"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/term_info_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_collect_personal_info"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/term_info_helper"
        android:textColor="@color/black_100"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/term_content_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term_info_helper"
        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/term_content_2"
        android:textColor="@color/black_100"
        android:textSize="13sp" />
</RelativeLayout>